Fix: CorsConfig